fix(button): adjusts outline border hover behavior in high contrast mode

--- a/components/button/index.css
+++ b/components/button/index.css
@@ -310,6 +310,10 @@ a.spectrum-Button {
 		--highcontrast-button-content-color-hover: ButtonText;
 		--highcontrast-button-content-color-focus: ButtonText;
 		--highcontrast-button-content-color-down: ButtonText;
+		--highcontrast-button-border-color-default: ButtonBorder;
+    --highcontrast-button-border-color-hover: ButtonBorder;
+    --highcontrast-button-border-color-focus: ButtonBorder;
+    --highcontrast-button-border-color-down: ButtonBorder;
 		--highcontrast-button-background-color-default: ButtonFace;
 		--highcontrast-button-background-color-hover: ButtonFace;
 		--highcontrast-button-background-color-down: ButtonFace;
@@ -317,9 +321,11 @@ a.spectrum-Button {
 		--highcontrast-button-background-color-disabled: ButtonFace;
 		--highcontrast-button-content-color-disabled: GrayText;
 		--highcontrast-button-border-color-disabled: GrayText;
+
 		--mod-progress-circle-track-border-color: ButtonText;
 		--mod-progress-circle-track-border-color-over-background: ButtonText;
 		--mod-progress-circle-thickness: var(--spectrum-progress-circle-thickness-medium);
+		--mod-button-animation-duration: 0s;
 
 		.spectrum-Button-label {
 			forced-color-adjust: none;
@@ -340,9 +346,10 @@ a.spectrum-Button {
 			--highcontrast-button-background-color-hover: Highlight;
 			--highcontrast-button-background-color-down: Highlight;
 			--highcontrast-button-background-color-focus: Highlight;
-			--highcontrast-button-content-color-hover: HighlightText;
-      --highcontrast-button-content-color-down: HighlightText;
-      --highcontrast-button-content-color-focus: HighlightText;
+			--highcontrast-button-border-color-default: ButtonText;
+			--highcontrast-button-border-color-hover: Highlight;
+			--highcontrast-button-border-color-focus: Highlight;
+			--highcontrast-button-border-color-down: Highlight;
 		}
 	}
 }
